--- a/src/app/usuarios/usuario-form/usuario-form.component.html
+++ b/src/app/usuarios/usuario-form/usuario-form.component.html
@@ -2,31 +2,32 @@
   <div class="card center">
       <div class="card-content">
         <h5>{{ func }} Usuario</h5>
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="nome" [(ngModel)]="usuario.nome" type="text" class="validate">
-            <label for="nome" class="active">Nome</label>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="nome" [(ngModel)]="usuario.nome" type="text" class="validate">
+              <label for="nome" class="active">Nome</label>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="email" [(ngModel)]="usuario.email" type="email" class="validate">
-            <label for="email" class="active">Email</label>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="email" [(ngModel)]="usuario.email" type="email" class="validate">
+              <label for="email" class="active">Email</label>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="senha" [(ngModel)]="usuario.senha" type="password" class="validate">
-            <label for="senha" class="active">Senha</label>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="senha" [(ngModel)]="usuario.senha" type="password" 
+                class="validate" name="senha">
+              <label for="senha" class="active">Senha</label>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="telefone" [(ngModel)]="usuario.telefone" type="text" class="validate">
-            <label for="telefone" class="active">Telefone</label>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="telefone" [(ngModel)]="usuario.telefone" type="text" class="validate">
+              <label for="telefone" class="active">Telefone</label>
+            </div>
           </div>
-        </div>
-        <a class="waves-effect waves-light btn" (click)="salvar()">Salvar</a>
-    </div>
+          <button class="waves-effect waves-light btn" type="submit" (click)="salvar()">Salvar</button>
+      </div>
   </div>
 </div> 
