--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,10 @@ body{
 .imgLogin{
 	max-width: 170px;
 }
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
